--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build:
+  job1:
     docker:
       - image: circleci/node:10
 
@@ -8,3 +8,25 @@ jobs:
       - checkout
       - run: npm install
       - run: npm test
+
+  job2:
+    docker:
+      - image: circleci/node:10
+
+    steps:
+      - checkout
+      - run: cat README.md
+
+workflows:
+  version: 2
+  first_workflow:
+    jobs:
+      - job1
+      - job2
+  second_workflow:
+    jobs:
+      - job1
+      - job2:
+          requires:
+            - job1
+
